[tool.poetry]
name = "flask-zz"
version = "0.1.0"
description = ""
authors = ["Marilzon <maxmaril@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.2"
flask = "^3.0.3"
requests = "^2.32.3"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
